--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,8 +73,8 @@ li {
 .headline {
   position: relative;
   top: 10rem;
-  right: -2rem;
   float: right;
+  margin-right: -4rem;
   background-color: white;
   padding: 1.5rem 5rem;
   font-size: 2rem;
@@ -173,6 +173,7 @@ footer {
   .headline {
     top: 5rem;
     right: 2rem;
+    margin-right: 0;
     padding: 0.75rem 4rem;
     font-size: 1.33rem;
   }
